[package]
name = "nom-supreme"
version = "0.6.0"
authors = ["Nathan West <Lucretiel@gmail.com>"]
edition = "2018"

readme = "README.md"
license = "MPL-2.0"
description = "A collection of excellent utilities for nom"
repository = "https://github.com/Lucretiel/nom-supreme"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["error", "std"]
std = ["memchr/std", "nom/std"]
error = ["std", "indent_write", "joinery"]

[dependencies]
indent_write = {version = "2.0.0", optional = true }
joinery = {version = "2.0.0", optional = true }
memchr = {version = "2.3.4", default-features = false }
nom = { version = ">=6.0.1, <8.0.0", default-features = false }
brownstone = {version = "1.0.0", default-features = false }

[dev-dependencies]
cool_asserts = "1.0.3"
