[package]
name = "nom-supreme"
version = "0.9.0"
authors = ["Nathan West <Lucretiel@gmail.com>"]
edition = "2018"

readme = "README.md"
license = "MPL-2.0"
description = "A collection of excellent utilities for nom"
repository = "https://github.com/Lucretiel/nom-supreme"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
brownstone = { version = "3.0.0", default-features = false }
memchr = { version = "2.5.0", default-features = false }
nom = { version = ">=6.0.1, <8.0.0", default-features = false }

# Used for printing errors
indent_write = { version = "2.2.0", default-features = false }
joinery = { version = "3.1.0", default-features = false }

[dev-dependencies]
cool_asserts = "2.0.3"

[features]
default = ["std", "alloc"]

alloc = ["nom/alloc"]
std = ["alloc", "memchr/std"]
